[gd_scene load_steps=10 format=3 uid="uid://w26oead5jqrr"]

[ext_resource type="Script" path="res://scriptit/maailma.gd" id="1_4lfmi"]
[ext_resource type="PackedScene" uid="uid://cul4v4qwqc6fq" path="res://scenet/etunakyma.tscn" id="1_lghj3"]
[ext_resource type="PackedScene" uid="uid://du427aysdsc07" path="res://scenet/lepotila_nakyma.tscn" id="1_mppf7"]
[ext_resource type="PackedScene" uid="uid://dkxrsbcksopxr" path="res://scenet/kuskinpuolen_nakyma.tscn" id="2_grlra"]
[ext_resource type="PackedScene" uid="uid://y4kepeohasxw" path="res://scenet/apukuskinpuolen_nakyma.tscn" id="3_gvo7r"]
[ext_resource type="Script" path="res://scriptit/ui.gd" id="6_hjyou"]
[ext_resource type="Texture2D" uid="uid://b44cmgndh342c" path="res://assets/grafiikka/inventory.png" id="7_bwx3d"]
[ext_resource type="Texture2D" uid="uid://yrf3p78wbngn" path="res://assets/grafiikka/arrow.png" id="8_khiiw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jp2df"]

[node name="maailma" type="Node2D"]
script = ExtResource("1_4lfmi")

[node name="LepotilaNakyma" parent="." instance=ExtResource("1_mppf7")]

[node name="Etunakyma" parent="." instance=ExtResource("1_lghj3")]

[node name="ApukuskinpuolenNakyma" parent="." instance=ExtResource("3_gvo7r")]

[node name="KuskinpuolenNakyma" parent="." instance=ExtResource("2_grlra")]

[node name="UI" type="Node2D" parent="."]
script = ExtResource("6_hjyou")

[node name="inventory" type="Area2D" parent="UI"]
position = Vector2(400, 2.08165e-12)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/inventory"]
polygon = PackedVector2Array(-200, 2.08165e-12, 2.08165e-12, 50, 200, 2.08165e-12, 300, -200, -300, -200)

[node name="Inventory" type="Sprite2D" parent="UI/inventory"]
position = Vector2(2.08165e-12, -100)
texture = ExtResource("7_bwx3d")

[node name="inventory arrow" type="Sprite2D" parent="UI/inventory"]
position = Vector2(2.08165e-12, 30)
rotation = -1.5708
texture = ExtResource("8_khiiw")

[node name="right" type="Sprite2D" parent="UI"]
position = Vector2(750, 300)
rotation = 3.14159
texture = ExtResource("8_khiiw")

[node name="leftArrow" type="Button" parent="UI"]
offset_left = 20.0
offset_top = 259.0
offset_right = 70.0
offset_bottom = 339.0

[node name="TextureRect" type="TextureRect" parent="UI/leftArrow"]
material = SubResource("CanvasItemMaterial_jp2df")
layout_mode = 0
offset_right = 61.0
offset_bottom = 80.0
texture = ExtResource("8_khiiw")

[connection signal="pressed" from="UI/leftArrow" to="." method="_on_left_arrow_pressed"]
